[FIX] marketing_automation: hierarchy layout issue
This commit fixes layout issues, in this case margin issue with the
hierarchy panel, and adapts design for Milk.

task-3326357
part of task-3326263

closes odoo/enterprise#46396

X-original-commit: 8b6ab17f9492f5ef86ee3a3935ecfd27c14e7c60

--- a/marketing_automation/static/src/scss/marketing_automation.scss
+++ b/marketing_automation/static/src/scss/marketing_automation.scss
@@ -20,16 +20,11 @@
 // Abstract Hierarchy
 // ------------------------------------------------------------------
 .o_ma_hierarchy {
-    margin-left: -$o-horizontal-padding;
-    margin-right: -$o-horizontal-padding;
-    @include media-breakpoint-up(lg, $o-extra-grid-breakpoints) {
-        margin-left: -$o-horizontal-padding*2;
-        margin-right: -$o-horizontal-padding*2;
-    }
-    margin-bottom:-24px;
-    padding: 10px 0px 24px 16px;
+    margin-left: calc(var(--formView-sheet-padding-x) * -1);
+    margin-right: calc(var(--formView-sheet-padding-x) * -1);
+    margin-bottom: calc(var(--formView-sheet-padding-x) * -1);
+    padding: var(--formView-sheet-padding-x);
     background-color: $o-ma-hierarchy-background;
-    box-shadow: 0px 1px 1px rgba(17, 17, 17, 0.23);
     .o_ma_hierarchy_title {
         padding: 0px 0px 0px 72px;
         font-size: 18px;
